# GaussMap

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  ah.txt  array.txt  maxima.txt  radar.txt  requirements.txt  run.sh  setup.py
config/: cfg.yml  map.yml  nuscenes.yml
gpuSrc/: kernel.cu
include/: Position.cuh  cudaUtils.hpp  derivative.cuh  gaussMap.cuh  gaussMap.hpp  gaussMapRos.hpp  header.hpp  params.hpp  types.hpp  utils.hpp
include/ecocar_fusion/: gaussMap.hpp  gaussMapPy.hpp  objData.hpp  params.hpp  types.hpp  utils.hpp
pySrc/: GaussMapWrapper.py  consts.py  main.py  optimize.py  test.py  vis.py
scripts/: calcMaxHeights.py  clean.sh  genCenterTrack.py  run.sh  runDocker.sh  wrapper.pyx
src/: Position.cu  cudaUtils.cpp  derivative.cu  gaussMap.cpp  gaussMapPy.cpp  gaussMapRos.cpp  kernel.cu  main.cpp  utils.cpp
src/gpu/: ALL.cu  associate.cu  calcMax.cu  gaussMapGPU.cu  radarPoint.cu  reset.cu
